Stackable grid no longer sits flush on mobile

--- a/src/definitions/collections/grid.less
+++ b/src/definitions/collections/grid.less
@@ -1667,8 +1667,12 @@
   .ui.stackable.grid {
     display: block !important;
     width: auto;
+    /* Stackable grid should always be padded on mobile ?
     margin-left: -(@stackableGutter / 2) !important;
     margin-right: -(@stackableGutter / 2) !important;
+    */
+    margin-left: 0em !important;
+    margin-right: 0em !important;
     padding: 0em;
   }
   .ui.stackable.grid > .row > .wide.column,
